--- a/DigitalPet/app/src/main/res/layout/activity_dashboard.xml
+++ b/DigitalPet/app/src/main/res/layout/activity_dashboard.xml
@@ -1,7 +1,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background">
@@ -159,6 +158,19 @@
                 <include
                     android:id="@+id/animationLayout"
                     layout="@layout/animation_layout"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toTopOf="@+id/bottomStatusBar"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/topStatusBar" />
+
+                <include
+                    android:id="@+id/battleLayout"
+                    layout="@layout/battle_layout"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_marginTop="16dp"
