--- a/digital-monster/resources/css/app.css
+++ b/digital-monster/resources/css/app.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .square-grid-bg {
+        background-color: #262626; 
+        background-image: linear-gradient(90deg, #333333 2px, transparent 1px), 
+                          linear-gradient(180deg, #333333 2px, transparent 1px);
+        background-size: 50px 50px;
+        animation: moveSquares 5s linear infinite;
+    }
+
+    @keyframes moveSquares {
+        from {
+            background-position: 0 0;
+        }
+        to {
+            background-position: -50px -50px;
+        }
+    }
+}
