--- a/digital-monster/resources/css/app.css
+++ b/digital-monster/resources/css/app.css
@@ -25,3 +25,59 @@
     background-color: #e47e00;
     color: #333333;
 }
+
+/* Dashboard */
+.monster {
+    position: relative;
+    cursor: pointer;
+}
+.monster .sprite {
+    transform-origin: center;
+}
+.monster .tooltip {
+    visibility: hidden;
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 4px 8px;
+    border-radius: 4px;
+    position: absolute;
+    bottom: 110%;
+    left: 50%;
+    transform: translateX(-50%);
+    white-space: nowrap;
+    z-index: 1;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+.monster:hover .tooltip {
+    visibility: visible;
+    opacity: 1;
+}
+#stats-panel {
+    animation: slideIn 0.3s ease-out;
+}
+@keyframes slideIn {
+    from {
+        transform: translateY(20px);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+#monster-container.rounded-b-none {
+    border-bottom-left-radius: 0 !important;
+    border-bottom-right-radius: 0 !important;
+}
+#close-stats {
+    font-size: 2rem;
+    cursor: pointer;
+}
+#stat-stats {
+    display: flex;
+    gap: 5px;
+    align-items: center;
+}
+/* Dashboard */
